Fix: 채팅 챗 박스 overflow 변경

--- a/src/styles/pages/ChatPage.scss
+++ b/src/styles/pages/ChatPage.scss
@@ -185,6 +185,7 @@
         border-radius: 16px;
         background: #E1E1E1;
         max-width: 72%;
+        word-break: break-all;
       }
       span.is_read {
         color: #0064FF;
